[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/graphrag_toolkit_contrib"]


[project]
name = "graphrag-toolkit-lexical-graph-rdfox"
version = "0.1.0"
description = "RDFox (RDF/SPARQL) support for the AWS GraphRAG Toolkit, lexical graph"
requires-python = ">=3.10"
dynamic = ["dependencies"]
license = "Apache-2.0"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["src/graphrag_toolkit_contrib/lexical_graph/storage/graph/rdfox/requirements.txt"]
